/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Gabriel Fernandez
 */

// Called when the user wants to display all, completed, or incomplete items in the current list;
// Handles all of the user's requests for displaying the list
package ucf.assignments;

public class DisplayList {
    public void displayAll() {
        // Loop through all items in the ArrayList<String> of items that will be passed in as a param
        // Create a new .txt file called "All To Dos"
        // Store these values into a .txt file with appropriate new line spacing for neater formatting
        // Open the .txt file
    }

    public void displayComplete() {
        // Loop through all items in the ArrayList<String> of items
        // Create a new .txt file called "Completed To Dos"

        // if: item ArrayList<String>: is complete?
        //      Store inside the .txt file with appropriate spacing
        // else:
        //      Do nothing

        // Open the .txt file
    }

    public void displayIncomplete() {
        // Loop through all items in the ArrayList<String> of items
        // Create a new .txt file called "Incomplete To Dos"

        // if: item ArrayList<String>: is NOT complete?
        //      Store inside the .txt file with appropriate spacing
        // else:
        //      Do nothing

        // Open the .txt file
    }
}
